# IconFitter

./: .gitignore  CMakeLists.txt  README.md  algebra.h  feature_image.h  hog.h  patchmatch.h  template_match.cc  test.cc  visualization.h
